--- a/230706/230706p6.html
+++ b/230706/230706p6.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script src="https://kit.fontawesome.com/ec658d32e1.js" crossorigin="anonymous"></script>
   </head>
   <style>
     /* div {
@@ -29,5 +30,6 @@
   <body style="margin:0">
     <div class="overflow">asdffffffffffffffffffffffffff</div>
     </div>
+    <i class="fa-solid fa-truck-fast"></i>
   </body>
 </html>
